tests/script_runtime_errors/non_obj_access/error.txt
Error: 
    1 | event.snot.badger
      |            ^^^^^^ Conflicting types, got integer but expected record